took out large gifs + fixed title style + changed spacing of type

--- a/app/assets/stylesheets/components/_nav-buttons.scss
+++ b/app/assets/stylesheets/components/_nav-buttons.scss
@@ -40,8 +40,8 @@
   padding-top: 5px;
 }
 .cta-bttn:hover {
-  background-color: #a1212e;
-  color: white;
+  background-color: #e79e3c;
+  color: black;
   width: 77px;
   height: 50px;
   margin: 10px;
